--- a/TEST/start game.html
+++ b/TEST/start game.html
@@ -182,7 +182,7 @@
     document.getElementById("p1score").innerText = "0";
     document.getElementById("p2score").innerText = "0";
 
-    let timer = setInterval(() => {
+    let timer = setInterval(() => { <!--this is arrow functio-->
       if (timerRunning) {
         time++;
         document.getElementById("timer").innerText = time;
